# transformer-roofline-analyzer

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  transformer_roofline.py  transformer_roofline_analyzer
.claude/commands/: commit.md  pull-request.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pre-commit.yml  python-tests.yml  python-unit-tests.yml
config_parsers/: base.py  llama.py  llama4.py
core/: README.md  __init__.py  base_parser.py  utils.py
docs/: README.md  llama.md  llama4.md
parsers/: llama.py  llama4.py
tests/: CLAUDE.md  README.md  conftest.py  test_transformer_roofline.py
tests/end-to-end/: conftest.py  test_transformer_roofline.py
tests/end-to-end/llama/: output-0-0.txt  output-0-1.txt  output-1-0.txt  output-1-1.txt  test.json
tests/end-to-end/llama4/: config-0.json  test.json
tests/end-to-end/llama_hf/: output-llama31-70b.txt  output-llama32-1b.txt  output-llama4-maverick-17b-128e.txt  output-llama4-scout-17b-16e.txt
tests/llama/: config-0.json  config-1.json  output-0-0.txt  output-0-1.txt  output-0-2.txt  output-1-0.txt  output-1-1.txt
tests/llama4/: config-1.json  output-0-0.txt  output-0-1.txt  output-1-0.txt  output-1-1.txt
tests/llama_hf/: output-llama2-13b.txt  output-llama31-405b.txt  output-llama31-8b.txt  output-llama32-3b.txt  test.json
tests/unit/: __init__.py  conftest.py  test_base_parser.py  test_cli.py  test_llama4_parser.py  test_llama_parser.py  test_utils.py
transformer_roofline_analyzer/: __init__.py  __main__.py  cli.py
transformer_roofline_analyzer/core/: base_parser.py
transformer_roofline_analyzer/parsers/: README.md  __init__.py  llama.py  llama4.py
