[project]
name = "transformer-roofline-calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "Jen-Chien Chang", email = "jench2103@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)",
    "prefixed (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
types-tabulate = "^0.9.0.20241207"
pytest = "^8.4.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "-v"
