[project]
name = "transformer-roofline-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Jen-Chien Chang", email = "jench2103@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)",
    "prefixed (>=0.9.0,<0.10.0)",
    "transformers (>=4.30.0,<5.0.0)"
]

[project.scripts]
transformer-roofline-analyzer = "transformer_roofline_analyzer.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
types-tabulate = "^0.9.0.20241207"
pytest = "^8.4.0"
pyright = "^1.1.408"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "-v"
